# react-medical-triage

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  STATUS.md  justfile
.claude/commands/: delegate.md  sdd-cycle.md  worktree-finish.md  worktree-start.md
backend/: .dockerignore  Dockerfile  db.py  pyproject.toml
backend/agent/: prompts.py  react_loop.py
backend/agent/tools/: __init__.py  base.py  knowledge_base.py  symptom_ner.py  triage_protocol.py
backend/api/: main.py  schemas.py
backend/api/routers/: triage.py
backend/api/routes/: triage.py
backend/core/: config.py
backend/tests/: test_api_routers.py  test_api_routes.py  test_api_schemas.py  test_db.py  test_react_loop.py  test_tools_base.py  test_tools_knowledge_base.py  test_tools_registry.py  test_tools_symptom_ner.py  test_tools_triage_protocol.py  test_tracing.py
backend/tracing/: __init__.py  otel.py
docs/: workflow-design-session.md
evals/datasets/: synthetic_medical_corpus.json
frontend/: Dockerfile  eslint.config.js  index.html  package.json  vite.config.ts
infra/: docker-compose.yml
infra/protocols/: triage_protocols.json
infra/vllm/: Dockerfile
